--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
           <path d="m13.646 14.354-12-12 .708-.708 12 12-.707.707z"/>
         </svg>
       </button>
-      <button id="drainButton" type="button" class="btn btn-info">Drain</button>
+      <button id="drainButton" type="button" class="btn btn-info">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+          <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+        </svg>
+      </button>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
